# DirectionChess

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: DirChess.h
src/: DirChess.cpp
web/: CMakeLists.txt  client_windows.cpp
